<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_quizz"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.widget.Button
            android:id="@+id/menu"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/but"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:text="@string/menu"
            android:textColor="#0295C3"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textScreen"
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_0_5"
        android:textColor="#FFF"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/square"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textQuestion"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:lineSpacingExtra="6dp"
            android:text="@string/animals_in_english"
            android:textAlignment="center"
            android:textColor="#0295C3"
            android:textSize="26sp" />

    </LinearLayout>

    <LinearLayout
       android:layout_width="400dp"
       android:layout_height="150dp"
       android:layout_gravity="center"
       android:gravity="center"
       android:orientation="horizontal">

      <EditText
          android:id="@+id/editText"
          android:layout_width="200dp"
          android:layout_height="80dp"
          android:layout_gravity="center"
          android:layout_marginStart="80dp"
          android:layout_marginTop="50dp"
          android:layout_marginEnd="20dp"
          android:layout_marginBottom="40dp"
          android:background="@drawable/square2"
          android:clickable="false"
          android:focusable="false"
          android:gravity="center"
          android:padding="10dp"
          android:textColor="#0295C3"
          android:textSize="32sp"
          tools:ignore="Autofill,LabelFor,TextFields" />

      <android.widget.Button
          android:id="@+id/button_id"
          android:layout_width="70dp"
          android:layout_height="wrap_content"
          android:textColor="#0295C3"
          android:textSize="12sp"
          android:gravity="center"
          android:layout_marginTop="15dp"
          android:background="@drawable/buttons"
          android:text="@string/reshuffle" />

   </LinearLayout>

   <TextView
        android:layout_width="match_parent"
        android:id="@+id/textTitle"
        android:text="@string/spell_an_animal"
        android:textSize="24sp"
        android:textColor="#FFF"
        android:layout_marginRight="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="8dp"

        android:layout_height="wrap_content"/>

    
    <LinearLayout
        android:id="@+id/layoutParent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">



    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutParent2"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">

    </LinearLayout>



</LinearLayout>